src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOB_Receiving__c</fullName>
        <description>This is the line of business receiving the referral</description>
        <inlineHelpText>This is the line of business receiving the referral</inlineHelpText>
        <label>LOB Receiving</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Referring__c</fullName>
        <description>This is the line of business sending the referral</description>
        <inlineHelpText>This is the line of business sending the referral</inlineHelpText>
        <label>LOB Referring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the product that is related to the referral</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>A reason needs to be set if the referral status is updated to &quot;No Opportunity&quot;</description>
        <inlineHelpText>A reason needs to be set if the referral status is updated to &quot;No Opportunity&quot;</inlineHelpText>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Meet Need</fullName>
                </value>
                <value>
                    <fullName>Lost to Competition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <description>This is the current status of the referral</description>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Receiving</fullName>
                </value>
                <value>
                    <fullName>Decision Pending</fullName>
                </value>
                <value>
                    <fullName>Create Opportunity</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Receiving_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user that is receiving the referral</description>
        <label>Referred To Party</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Sending_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the user that is sending the referral</description>
        <label>Referred from Party</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WAVEAccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WAVEAccountName</label>
        <type>Text</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <recordTypes>
        <fullName>Closed_Retail</fullName>
        <active>true</active>
        <description>This record type will be used for closed retail referrals</description>
        <label>Closed Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial</fullName>
        <active>true</active>
        <description>Create Commercial Referrals for Business Accounts</description>
        <label>Commercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Retail referrals should be used for person accounts</description>
        <label>Retail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_Referral_read_only</fullName>
        <active>true</active>
        <description>When a referral is changed to &quot;Create Opportunity&quot; or &quot;No Opportunity&quot; status, the Referral Name and Account fields need to be made read only.</description>
        <errorConditionFormula>IF( or( ISPICKVAL( Referral_Status__c ,&apos;Create Opportunity&apos;), ISPICKVAL( Referral_Status__c ,&apos;No Opportunity&apos;)), or( ISCHANGED( Account__c ), ISCHANGED( Name )),false)</errorConditionFormula>
        <errorMessage>If the Referral Status is Create Opportunity or No Opportunity, the Referral and Account Name fields cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Lost_if_Status_equals_No_Oppty</fullName>
        <active>true</active>
        <description>Populate Reason Lost field on referral if the Referral Status is updated to &quot;No Opportunity&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Referral_Status__c , &quot;No Opportunity&quot;),
 ISPICKVAL( Reason_Lost__c , &quot;&quot;) 
 )</errorConditionFormula>
        <errorDisplayField>Reason_Lost__c</errorDisplayField>
        <errorMessage>The Reason Lost field needs to be populated if the Referral Status is &quot;No Opportunity&quot;</errorMessage>
    </validationRules>
</CustomObject>